--- a/README
+++ b/README
@@ -1,3 +1,6 @@
 As New Year's Eve is coming, here is a small OS X app that counts down to midnight.
 
-From the menu, you can make it fullscreen (Cmd+Q to exit), as well as test the "midnight effect" (fireworks simulation and playing whatever video you defined in Settings).
+The idea is that you set the desktop background to play a slideshow, and put this app on top. It has transparent background and can be moved around and zoomed by the standard Cmd+Shift+Plus/Minus way.
+
+From the menu, you define a video (e.g. fireworks) which will be automatically played at midnight.
+
